chore: remove welcome endpoint from documentation
