# app/Http/Controllers/API/v1/WelcomeController.php
@@ -7,19 +7,6 @@ use Symfony\Component\HttpFoundation\Response;
 
 class WelcomeController extends Controller
 {
-    /**
-     * @OA\Get(
-     * path="/api/v1/",
-     * summary="Welcome message",
-     * description="Get welcome message",
-     * operationId="welcome",
-     * tags={"welcome"},
-     * @OA\Response(
-     *    response=200,
-     *    description="Success",
-     *     ),
-     * )
-     */
     public function index()
     {
         $response = [
